--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ os: windows
 language: shell
 before_install:
 # Install NVS.
-- git clone --branch v%NVS_VERSION% --depth 1 https://github.com/jasongin/nvs %LOCALAPPDATA%\nvs
+- git clone --branch v1.2.0 --depth 1 https://github.com/jasongin/nvs %LOCALAPPDATA%\nvs
 - set PATH=%LOCALAPPDATA%\nvs;%PATH%
 - nvs --version
 environment:
