--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 os: windows
-language: shell
+language: node_js
 before_install:
 # Install NVS.
 - git clone --branch v1.2.0 --depth 1 https://github.com/jasongin/nvs %LOCALAPPDATA%\nvs
