--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ node_js:
 before_install:
 # Install NVS.
 - git clone --branch v1.2.0 --depth 1 https://github.com/jasongin/nvs C:/nvs
-- set PATH=C:/nvs;%PATH%
+- set PATH=C:/nvs;
 - nvs --version
 environment:
   NVS_VERSION: 1.2.0
