--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ before_install:
 - nvs --version
 environment:
   NVS_VERSION: 1.2.0
-before_install: cd C:/npminstall
+before_install: cd project
 install:
 # Install the selected version of Node.js using NVS.
 - nvs add 7.10.1
