--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ install:
 - node --version
 - npm --version
 # Install the application's NPM dependencies.
-- npm install
+- npm init
 # keep the npm cache around to speed up installs
 cache:
   directories:
