--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ before_install:
 environment:
   NVS_VERSION: 1.2.0
 install:
+- mkdir travisAlanAgile
 # Install the selected version of Node.js using NVS.
 - nvs add 7.10.1
 - nvs use node/7.10/x64
