--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ install:
 - npm --version
 # Install the application's NPM dependencies.
 #- npm init
-- npm install packagepackage --save
+- npm install <package> --save
 # keep the npm cache around to speed up installs
 cache:
   directories:
