--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,9 @@ before_install:
 - nvs --version
 environment:
   NVS_VERSION: 1.2.0
-install:
+before_install:
+  - npm i -g npm@4.2.0
+  install:
 - mkdir travisAlanAgile
 # Install the selected version of Node.js using NVS.
 - nvs add 7.10.1
